--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   
 .profile {
     margin: auto;
-    margin-top: 5vh;
+    margin-top: 2.5vh;
     width: 50%;
 }
 
@@ -123,13 +123,13 @@ body {
 }
 
 .sandMounts{
-    position: relative;
-    height:5vh;
-    margin-left:8.5vw;
+    position: absolute;
+    left:10vw;
     margin-top:10px;
-    width: 80%;
+    width: 78%;
     margin-bottom: 0px;
-    bottom: 0;
+    bottom: -20;
+    padding:0;
 }
 
 .footer {
